5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1573_1326.log
== TEST (2019-03-11 15:00:09) 
-- CODE:
 R$75
-- ERROR:
File "XXXX", line 1
    R$75
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:00:49) 
-- CODE:
 R$75
-- ERROR:
File "XXXX", line 1
    R$75
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:01:24) 
-- CODE:
 R$ 75
-- ERROR:
File "XXXX", line 1
    R$ 75
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:02:49) 
-- CODE:
 print(R$ 40+R$ 35  )
-- ERROR:
File "XXXX", line 1
    print(R$ 40+R$ 35  )
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:02:57) 
-- CODE:
 print(R$ 40 R$ 35  )
-- ERROR:
File "XXXX", line 1
    print(R$ 40 R$ 35  )
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:03:40) 
-- CODE:
 print(Sosígenes e Jocasta foram a um restaurante. Ele gastou R$ 40 e ela gastou R$ 35.)
-- ERROR:
File "XXXX", line 1
    print(Sosígenes e Jocasta foram a um restaurante. Ele gastou R$ 40 e ela gastou R$ 35.)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:35) 
-- CODE:
 print(75)
-- ERROR:
File "XXXX", line 1
    print(75)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:43) 
-- CODE:
 print(75)
-- ERROR:
File "XXXX", line 1
    print(75)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:52) 
-- CODE:
 print(75)
-- EXECUTION TIME:
0.19143
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    print(75)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:55) 
-- CODE:
 print(75)
-- ERROR:
File "XXXX", line 1
    print(75)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:14) 
-- CODE:
 print(75)
-- ERROR:
File "XXXX", line 1
    print(75)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:08:29) 
-- CODE:
 print(75)
-- ERROR:
File "XXXX", line 1
    print(75)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:08:52) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:08:55) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.119229
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
